# humandriver

./: LICENSE  README.md  gemini.md  publish.yml  pyproject.toml  setup.py
.github/workflows/: python-publish.yml
docs/: project_state_diagram.md
humandriver/: __init__.py  human_mouse.py  utils.py
humandriver/keyboard/: __init__.py  analysis.py  behaviors.py  config.py  keyboard.py  pacer.py  primitives.py  telemetry.py  utils.py
humandriver/mouse/: __init__.py  analysis.py  behaviors.py  config.py  controller.py  dispatchers.py  geometry.py  render.py  telemetry.py
src/keyboard/: analysis.py  behaviors.py  keyboard.py  pacer.py  primitives.py
src/mouse/: __init__.py  behaviors.py  config.py  dispatchers.py  mouse.py  render.py  telemetry.py
